[package]
name = "osc-obs-bridge"
version = "0.1.0"
edition = "2021"
description = "Lightweight OSC to OBS WebSocket bridge for TouchOSC scene switching"

[dependencies]
tokio = { version = "1", features = ["full"] }
obws = { version = "0.15", features = ["events"] }
rosc = "0.11"
tray-icon = "0.21"
muda = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
anyhow = "1"
mdns-sd = "0.18"
if-addrs = "0.15"
futures-util = "0.3"
open = "5"

# Hide console window on Windows release builds
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
